--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.0",
     "reading-time": "^1.5.0",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "vite": "^5.4.21"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -31,7 +32,6 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
-    "vite": "^5.4.21"
+    "tailwindcss": "^3.4.0"
   }
 }
