--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build":"npm --prefix client install && npm --prefix client run build",
     "preview": "vite preview"
   },
   "dependencies": {
