--- a/package.json
+++ b/package.json
@@ -7,14 +7,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon server/server.js",
     "client": "cd client && npm run dev",
-    "postinstall": "npm --prefix client install",
-    "build": "npm --prefix client run build",
-
-    "install-all": "npm install && cd client && npm install",
-    "create-admin": "node server/scripts/createAdmin.js"},
-    "postinstall": "npm --prefix client install",
-    "build": "npm --prefix client run build",
-
+    "build": "cd client && npm run build",
     "install-all": "npm install && cd client && npm install",
     "create-admin": "node server/scripts/createAdmin.js"
   },
